--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,19 +1,6 @@
 ################################################################################
 # DOMESTIC OFFERS
 ################################################################################
-
-- title: Prisbelönt designhotell i Linköping
-  id: prisbelönt-designhotell-i-linköping
-  location: Quality Hotel The Box, Linköping
-  description: Nybyggt hotell med lyxigt wellnessområde, inkl. frukost och tvårättersmiddag som tillval
-  price: 890
-  price-description: per rum per natt
-  saved: 22
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73003/09903476_97eb_4551_a24c_ee62e9fe965a.jpg
-  link: https://www.secretescapes.se/prisbelont-designhotell-i-linkoping-quality-hotel-the-box-linkoping/sale
-  domestic: true
-
 - title: Snyggt designhotell i Malmö
   id: snyggt-designhotell-i-malmö
   location: Elite Hotel Esplanade, Malmö
@@ -21,7 +8,7 @@
   price: 920
   price-description: per rum per natt
   saved: 47
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/63815/54fb58c7_20ef_401f_81f6_e1c7d2141ea3.jpg
   link: https://www.secretescapes.se/snyggt-designhotell-i-malmo-elite-hotel-esplanade-malmo/sale
   domestic: true
@@ -33,7 +20,7 @@
   price: 2150
   price-description: per rum per natt
   saved: 20
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91985/0a6df9ee_c786_4b91_85c7_7f865d0fa913.jpg
   link: https://www.secretescapes.se/vaelgorande-vistelse-paa-marstrand-marstrands-havsbad-marstrand/sale
   domestic: true
@@ -44,50 +31,14 @@
   price: 400
   price-description: per person. Baserat på 2 personer per rum
   saved: 58
-  expires: 2019/04/15
-  image: https://d1x3cbuht6sy0f.cloudfront.net/hotels/146/dcc056ed_efa2_4887_b4f3_1dd905e933b9.jpg
+  expires: 2019/04/23
+  image: https://d2xb1gb82lp62v.cloudfront.net/image/upload/f_auto,q_auto:best/a/hotels/146/dcc056ed_efa2_4887_b4f3_1dd905e933b9.jpg
   link: https://www.secretescapes.se/blique-by-nobis-stockholm-sweden/sale-hotel
   domestic: true
 
 ################################################################################
 # NON DOMESTIC OFFERS
 ################################################################################
-
-- title: Utforska Florens enastående charm
-  id: utforska-florens-enastående-charm
-  location: Hotel Regency, Florens, Italien
-  description: Ett magiskt citybreak på ett elegant hotell, inkl. frukost
-  price: 2250
-  price-description: per rum per natt
-  saved: 30
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90864/5ff69763_5c4c_4538_81dd_a7defb8f9cec.jpg
-  link: https://www.secretescapes.se/utforska-florens-enastaaende-charm-hotel-regency-florens-italien-se-1/sale
-  domestic: false
-
-- title: Ottomanskt influerat hotell på ön Lido
-  id: ottomanskt-influerat-hotell-på-ön-lido
-  location: Hotel Excelsior Venice, Venedig, Italien
-  description: Femstjärnigt boende med  privat strand i Venedig, inkl. frukost och prosecco
-  price: 2550
-  price-description: per rum per natt
-  saved: 57
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/75630/7ddaaff7_8bc0_4719_aac9_286aada1739c.jpg
-  link: https://www.secretescapes.se/ottomanska-influenser-paa-on-lido-hotel-excelsior-venice-venedig-italien-se1/sale
-  domestic: false
-
-- title: Italiensk elegans i huvudstaden
-  id: italiensk-elegans-i-huvudstaden
-  location: Palazzo Montemartini, Rom, Italien
-  description: Femstjärnigt lyxhotell i centrala Rom, inkl. frukost och välkomstdrink
-  price: 2150
-  price-description: per rum per natt
-  saved: 27
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/9500/07a373e6_a681_46dd_bb8f_5bd72d0168fa.jpg
-  link: https://www.secretescapes.se/italiensk-elegans-i-huvudstaden-palazzo-montemartini-rom-italien/sale
-  domestic: false
 
 - title: Femstjärnigt mittemot Guggenheim
   id: femstjärnigt-mittemot-guggenheim
@@ -96,7 +47,7 @@
   price: 2050
   price-description: per rum per natt
   saved: 28
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/19032/495d410a_c6c5_4140_81dc_aec30a81cc62.jpg
   link: https://www.secretescapes.se/femstjaernigt-mittemot-guggenheim-gran-hotel-domine-bilbao-spanien-se/sale
   domestic: false
@@ -108,69 +59,9 @@
   price: 1900
   price-description: per rum per natt
   saved: 30
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/45456/38aec453_c786_4637_a10f_3caa1f3cb1ef.jpg
   link: https://www.secretescapes.se/exklusivt-spa-vid-havet-i-norge-farris-bad-larvik-norge/sale
-  domestic: false
-
-- title: Prisad sparesort i norska fjällen
-  id: prisad-sparesort-i-norska-fjällen
-  location: Norefjell Ski & Spa, Norefjell, Norge
-  description: Ladda batterierna i Norges vackra bergslandskap, inkl. frukost, spaentré och matrabatt
-  price: 1470
-  price-description: per rum per natt
-  saved: 54
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/17936/11992191_db6d_45ca_a87f_7907f06e1146.jpg
-  link: https://www.secretescapes.se/prisad-sparesort-i-norska-fjaellen-norefjell-ski-and-spa-norefjell-norge/sale
-  domestic: false
-
-- title: Läckert designhotell i Bergen
-  id: läckert-designhotell-i-bergen
-  location: Magic Hotel Solheimsviken, Bergen, Norge
-  description: En hipp bas i Norges näst största stad, inkl. frukost och rabatt i restaurangen
-  price: 730
-  price-description: per rum per natt
-  saved: 21
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/39581/907442d2_a1e7_488a_a406_9f9cb5202324.jpg
-  link: https://www.secretescapes.se/laeckert-designhotell-i-bergen-magic-hotel-solheimsviken-bergen-norge-se1/sale
-  domestic: false
-
-- title: Prisbelönt hotell i magiska Trondheim
-  id: prisbelönt-hotell-i-magiska-trondheim
-  location: Clarion Hotel & Congress Trondheim, Trondheim, Norge
-  description: Boende på ett modernt hotell precis vid fjorden, inkl. frukost
-  price: 1160
-  price-description: per rum per natt
-  saved: 37
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/10431/06368d1a_3eae_4fdc_a62b_4a85276b6b3d.jpg
-  link: https://www.secretescapes.se/prisbelont-hotell-i-magiska-trondheim-clarion-hotel-and-congress-trondheim-trondheim-norge/sale
-  domestic: false
-
-- title: Ekovänligt hotell i Tromsö
-  id: ekovänligt-hotell-i-tromsö
-  location: Clarion Hotel The Edge, Tromsö, Norge
-  description: Stilrent och modernt boende med miljötänk i vackra, naturnära Tromsö, inkl. frukost
-  price: 1290
-  price-description: per rum per natt
-  saved: 37
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/33026/d2ec107a_e2a9_469d_9052_e0532d4e4429.jpg
-  link: https://www.secretescapes.se/ekovaenligt-hotell-i-tromso-clarion-hotel-the-edge-tromso-norge/sale
-  domestic: false
-
-- title: Nytt och femstjärnigt på Teneriffa
-  id: nytt-och-femstjärnigt-på-teneriffa
-  location: H10 Atlantic Sunset, Playa Paraiso, Teneriffa, Spanien
-  description: Boende på ett nyöppnat lyxhotell i rofyllda Playa Paraiso, inkl. halvpension eller all-inclusive
-  price: 1500
-  price-description: per rum per natt
-  saved: 48
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91198/b57978af_4699_4696_8c4a_741666e30bb8.jpg
-  link: https://www.secretescapes.se/nytt-och-femstjaernigt-paa-teneriffa-h10-atlantic-sunset-playa-paraiso-teneriffa-spanien/sale
   domestic: false
 
 - title: Stilrent Madrid-hotell med Michelinrestaurang
@@ -180,45 +71,9 @@
   price: 970
   price-description: per rum per natt
   saved: 63
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90979/e201ba7d_8a8a_4044_989a_b4dd231c4591.jpg
   link: https://www.secretescapes.se/stilrent-madrid-hotell-med-michelinrestaurang-nh-collection-madrid-eurobuilding-madrid-spanien/sale
-  domestic: false
-
-- title: Elegant boutiquehotell i centrala Milano
-  id: elegant-boutiquehotell-i-centrala-milano
-  location: TownHouse Galleria, Milano, Italien
-  description: Unikt boende inuti den fashionabla gallerian Vittorio Emanuele II, inkl. frukost och prosecco
-  price: 3460
-  price-description: per rum per natt
-  saved: 36
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91152/874f9f11_1d6a_44fb_a037_3a361ffe004a.jpg
-  link: https://www.secretescapes.se/elegant-boutiquehotell-i-centrala-milano-townhouse-galleria-milano-italien/sale
-  domestic: false
-
-- title: Nytt hotell i toppklass på Costa del Sol
-  id: nytt-hotell-i-toppklass-på-costa-del-sol
-  location: Higueron Hotel Málaga Curio Collection by HILTON, Benalmadena, Spanien
-  description: Förstklassigt lyxhotell med spa och sportfaciliteter, inkl. halvpension, cocktail, spaentré och mer
-  price: 1670
-  price-description: per rum per natt
-  saved: 32
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91795/369acde2_2773_4309_b0bc_24850fc0a219.jpg
-  link: https://www.secretescapes.se/nytt-hotell-i-toppklass-paa-costa-del-sol-reserva-del-higueron-curio-collection-by-hilton-benalmadena-spanien/sale
-  domestic: false
-
-- title: Stilrent hotell i portugisiska Lagos
-  id: stilrent-hotell-i-portugisiska-lagos
-  location: Iberostar Selection Lagos Algarve, Lagos, Portugal
-  description: Elegant boende med spa, pooler och restaurang, nära Meia-stranden, med all-inclusive
-  price: 2010
-  price-description: per rum per natt
-  saved: 20
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91468/36c7c59c_9828_4fe0_8ed1_a41d17151db6.jpg
-  link: https://www.secretescapes.se/stilrent-hotell-i-portugisiska-lagos-iberostar-selection-lagos-algarve-lagos-portugal/sale
   domestic: false
 
 - title: Fyrstjärnigt boutiquehotell på Mallis
@@ -228,7 +83,7 @@
   price: 1120
   price-description: per rum per natt
   saved: 38
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/70624/e4ede240_9af5_42b3_8521_24cff9f626f6.jpg
   link: https://www.secretescapes.se/fyrstjaernigt-boutiquehotell-paa-mallis-fergus-style-palmanova-palmanova-mallorca-spanien-se/sale
   domestic: false
@@ -240,21 +95,9 @@
   price: 920
   price-description: per rum per natt
   saved: 63
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88312/3df765da_70b5_4101_bb17_42ac6d0b91b8.jpg
   link: https://www.secretescapes.se/all-inclusive-paa-playa-den-bossa-fergus-style-bahamas-playa-den-bossa-ibiza-spanien/sale
-  domestic: false
-
-- title: Centralt hotell med takterrass i Wien
-  id: centralt-hotell-med-takterrass-i-wien
-  location: Ruby Marie Hotel Vienna, Wien, Österrike
-  description: Öppna planytor och hipp dekor på centralt Wien-hotell, inkl. frukost
-  price: 1040
-  price-description: per rum per natt
-  saved: 48
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/53953/e546dc49_6b1b_48c8_ba9a_e7304fbfe0d3.jpg
-  link: https://www.secretescapes.se/centralt-hotell-med-takterrass-i-wien-ruby-marie-hotel-vienna-wien-osterrike-se-1/sale
   domestic: false
 
 - title: Toppenläge på Berlins shoppingstråk
@@ -264,45 +107,9 @@
   price: 1140
   price-description: per rum per natt
   saved: 38
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/63439/1bc52496_43bd_4644_a933_deabf034170f.jpg
   link: https://www.secretescapes.se/toppenlaege-paa-berlins-shoppingstraak-maritim-proarte-hotel-berlin-berlin-tyskland-sv/sale
-  domestic: false
-
-- title: Femstjärnigt och prisbelönt i Köln
-  id: femstjärnigt-och-prisbelönt-i-köln
-  location: Excelsior Hotel Ernst, Köln, Tyskland
-  description: Klassiskt lyxhotell med Michelinrestaurang, inkl. frukost, champagne m.m
-  price: 1980
-  price-description: per rum per natt
-  saved: 41
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/39037/8b89c7b8_f07b_4b97_b0ae_11b31d969ddd.jpg
-  link: https://www.secretescapes.se/femstjaernigt-och-prisbelont-i-koln-excelsior-hotel-ernst-koln-tyskland/sale
-  domestic: false
-
-- title: Fräscht hotell på fridfulla Sylt
-  id: fräscht-hotell-på-fridfulla-sylt
-  location: Hotel 54 Grad Nord, Hörnum, Sylt, Tyskland
-  description: Rum med balkong och utsikt över Sylts sanddyner, inkl. frukost och mer
-  price: 1820
-  price-description: per rum per natt
-  saved: 28
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/77633/dd367c39_99e4_42a0_87c1_c236756ee7c0.jpg
-  link: https://www.secretescapes.se/fraescht-hotell-paa-fridfulla-sylt-hotel-54-grad-nord-hornum-sylt-tyskland/sale
-  domestic: false
-
-- title: Spa och gourmetmat i Travemünde
-  id: spa-och-gourmetmat-i-travemünde
-  location: A-Rosa Travemünde, Travemünde, Tyskland
-  description: Femstjärnigt spahotell ett stenkast från Travemündes strandpromenad, inkl. frukost, m.m.
-  price: 2490
-  price-description: per rum per natt
-  saved: 31
-  expires: 2019/04/16
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/79408/42982d93_baf6_4147_a155_9f1d4c7564a2.jpg
-  link: https://www.secretescapes.se/spa-och-gourmetmat-i-travemuende-a-rosa-travemuende-travemuende-tyskland-se/sale
   domestic: false
 
 - title: Lyxhotell med spa vid havet på Mallis
@@ -312,7 +119,7 @@
   price: 1850
   price-description: per rum per natt
   saved: 35
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/6917/78e43e85_87b7_41b9_a813_ae328cbeab0b.jpg
   link: https://www.secretescapes.se/lyxhotell-med-spa-vid-havet-paa-mallis-hospes-maricel-and-spa-mallorca-spanien/sale
   domestic: false
@@ -324,7 +131,7 @@
   price: 1910
   price-description: per svit per natt
   saved: 28
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/14358/6b826e14_d685_43c3_bf87_f81127f69131.jpg
   link: https://www.secretescapes.se/resort-med-havsutsikt-paa-teneriffa-regency-country-club-teneriffa-spanien/sale
   domestic: false
@@ -336,7 +143,7 @@
   price: 1520
   price-description: per rum per natt
   saved: 38
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/9362/d78fa349_24c1_4f72_addd_b401bc657013.jpg
   link: https://www.secretescapes.se/femstjaernig-vuxenlyx-paa-gran-canaria-bohemia-suites-and-spa-gran-canaria-spanien/sale
   domestic: false
@@ -348,7 +155,7 @@
   price: 1570
   price-description: per rum per natt
   saved: 35
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/26471/50df1177_3d2b_4905_bd07_b810b9dcf1f8.jpg
   link: https://www.secretescapes.se/hojden-av-elegans-i-cordoba-hospes-palacio-del-bailio-cordoba-spanien01/sale
   domestic: false
@@ -360,7 +167,7 @@
   price: 1770
   price-description: per rum per natt
   saved: 48
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/42673/8f084a44_fc4a_41bd_b0cb_db5494ff4bba.jpg
   link: https://www.secretescapes.se/boutiquehotell-med-spa-i-hamburg-park-hyatt-hamburg-hamburg-tyskland-se-1/sale
   domestic: false
@@ -372,7 +179,7 @@
   price: 3140
   price-description: per svit per natt
   saved: 47
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90484/1ed97f1f_ed7b_4f29_aa12_ff6538b5ac46.jpg
   link: https://www.secretescapes.se/njut-av-mat-och-dryck-i-vackra-san-gemini-san-gemini-palace-san-gemini-italien/sale
   domestic: false
@@ -384,7 +191,7 @@
   price: 1670
   price-description: per rum per natt
   saved: 22
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91997/3359939e_7c20_43c5_9fcd_f6af8220003a.jpg
   link: https://www.secretescapes.se/elegant-hotell-paa-norra-sardinien-colonna-grand-hotel-capo-testa-santa-teresa-gallura-sardinien-italien/sale
   domestic: false
@@ -393,10 +200,10 @@
   id: klassisk-lyx-i-rom
   location: Grand Hotel Palace, Rom, Italien
   description: Boende på femstjärnigt hotell mitt i hjärtat av Rom, inkl. frukost och ett glas prosecco
-  price: 2680
+  price: 1890
   price-description: per rum per natt
   saved: 49
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/68210/e100ceda_acf8_4714_b3d7_21386766eb7c.jpg
   link: https://www.secretescapes.se/klassisk-lyx-i-rom-grand-hotel-palace-rom-italien/sale
   domestic: false
@@ -408,7 +215,7 @@
   price: 2200
   price-description: per rum per natt
   saved: 23
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91802/f94a7d0e_6c51_4121_b617_1c2089140f86.jpg
   link: https://www.secretescapes.se/trendigt-hotell-med-bra-laege-i-lissabon-myriad-by-sana-hotels-lissabon-portugal/sale
   domestic: false
@@ -497,18 +304,6 @@
   link: https://www.secretescapes.se/splitternytt-designhotell-i-oslo-clarion-hotel-the-hub-oslo-norge-se-1/sale
   domestic: false
 
-- title: Modern vistelse i vackra Stavanger
-  id: modern-vistelse-i-vackra-stavanger
-  location: Radisson Blu Royal Hotel, Stavanger, Norge
-  description: Bo på modernt hotell i centrala Stavanger med restaurang och spa, inkl. frukost
-  price: 1040
-  price-description: per rum per natt
-  saved: 42
-  expires: 2019/04/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/14180/6f74936c_c658_4fb1_8090_8993cf7ac642.jpg
-  link: https://www.secretescapes.se/modern-vistelse-i-vackra-stavanger-radisson-blu-royal-hotel-stavanger-norge/sale
-  domestic: false
-
 - title: Grandiost hotell med takterrass i Wien
   id: grandiost-hotell-med-takterrass-i-wien
   location: Grand Ferdinand, Wien, Österrike
@@ -528,7 +323,7 @@
   price: 1780
   price-description: per svit per natt
   saved: 37
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/18957/30b31771_3ba7_476e_9dbc_578dd07d4993.jpg
   link: https://www.secretescapes.se/spahotell-med-michelinrestaurang-i-berlin-the-mandala-hotel-berlin-tyskland/sale
   domestic: false
@@ -564,7 +359,18 @@
   price: 1040
   price-description: per rum per natt
   saved: 47
-  expires: 2019/04/16
+  expires: 2019/04/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/66916/5b60ff85_9d9c_422a_88ac_b6c9ac711229.jpg
   link: https://www.secretescapes.se/spaennande-storstadsvistelse-i-frankfurt-scandic-frankfurt-museumsufer-frankfurt-am-main-tyskland/sale
+  domestic: false
+
+- title: Modern vistelse i vackra Stavanger
+  location: Radisson Blu Royal Hotel, Stavanger, Norge
+  description: Bo på modernt hotell i centrala Stavanger med restaurang och spa, inkl. frukost
+  price: 520
+  price-description: per person. Baserat på 2 personer per rum
+  saved: 42
+  expires: 2019/04/23
+  image: https://d2xb1gb82lp62v.cloudfront.net/image/upload/f_auto,q_auto:best/a/sales/14180/6f74936c_c658_4fb1_8090_8993cf7ac642.jpg
+  link: https://www.secretescapes.se/modern-vistelse-i-vackra-stavanger-radisson-blu-royal-hotel-stavanger-norge/sale
   domestic: false
