--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -26,6 +26,17 @@
   link: https://no.secretescapes.com/splitter-nytt-og-sentralt-i-oslo-clarion-hotel-the-hub-oslo-norge-no-no/sale
   domestic: true
 
+- title: Norsk eventyrhotell fra 1894
+  location: Dalen Hotel, Dalen, Telemark
+  description: Historisk hotell med utmerket aktivitetsmangfold, inkl. frokost og femretters middag
+  price: 1950
+  price-description: per person. Basert på 2 personer per rom
+  saved: 24
+  expires: 2019/04/23
+  image: https://d2xb1gb82lp62v.cloudfront.net/image/upload/f_auto,q_auto:best/a/sales/91715/dee23a5c_2f61_49f3_b533_7ebafc2e281d.jpg
+  link: https://no.secretescapes.com/norsk-eventyrhotell-fra-1894-dalen-hotel-dalen-telemark/sale
+  domestic: true
+
 ################################################################################
 # NON DOMESTIC OFFERS
 ################################################################################
